@@ -1,5 +1,13 @@
 2001-11-17  Bruno Haible  <haible@clisp.cons.org>
 
+	* msgfmt.c (accelerator_char): New variable.
+	(long_options): --check-accelerators has optional argument.
+	(main): Store --check-accelerators value in accelerator_char.
+	(usage): --check-accelerators has optional argument.
+	(check_pair): Use accelerator_char instead of hardwired '&'.
+
+2001-11-17  Bruno Haible  <haible@clisp.cons.org>
+
 	* msginit.c (main): Print a blank line.
 	(get_title): Always use the English title first.
 	(fill_header): Update accordingly.
