@@ -1,3 +1,7 @@
+2001-11-17  Bruno Haible  <haible@clisp.cons.org>
+
+	* msgfmt.texi: --check-accelerators has optional argument.
+
 2001-11-11  Bruno Haible  <haible@clisp.cons.org>
 
 	* msgfmt.texi: Document --check-accelerators option.
